--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-router-prompt": "^0.7.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
